# Numerical-Approximator-Qt

./: README.md
root/: CMakeLists.txt  deploydlls.bat
root/code/application/: CMakeLists.txt
root/code/application/include/: appmenuitem.h  mainwindow.h
root/code/application/src/: CMakeLists.txt  appmenuitem.cpp  listwidget.cpp  main.cpp  mainwindow.cpp
root/code/include/: listwidget.h  mainwindow.h
root/code/modules/approximator/: CMakeLists.txt
root/code/modules/approximator/include/: approximator.h  bisection.h  determinant.h  falseposition.h  gausslinear.h  helpers.h  maclaurincosine.h  matrixdeterminant.h  matrixinverse.h  mullers.h  program.h
root/code/modules/approximator/src/: approximator.cpp  bisection.cpp  determinant.cpp  falseposition.cpp  gausslinear.cpp  maclaurincosine.cpp  matrixdeterminant.cpp  matrixinverse.cpp  mullers.cpp
root/code/src/: appmenuitem.cpp
